<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@drawable/gradient_background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/emailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF" />
    
    
<TextView
        android:id="@+id/orOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_option"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF" />
    

    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/white_normal"
        android:text="@string/sign_in_google"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>